apache_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deploymeht
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache-deployment
  template:
    metadata:
      labels:
        app: apache-deployment
    spec:
      containers:
      - name: apache
        image: httpd:latest
