app01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app01
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app01
  template:
    metadata:
      labels:
        app: app01
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
