daemon_set.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginxdaemon
  namespace: qq3
spec:
  selector:
    matchLabels:
      name: nginx
  template:
    metadata:
      labels:
        name: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
