pod_limit.yaml
apiVersion: v1
kind: Pod
metadata:
  name: limit
spec:
  containers:
  - name: redis
    image: redis
    resources:
      requests:
        cpu: "0.5"
        memory: "500Mi"
      limits:
        cpu: "1"
        memory: "1Gi"
