app01-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app01-svc
spec:
  selector:
    app: app01
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30001
  type: NodePort
